Increment count in insertBatch. Use getLast for small optimization.